2008-08-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac: Bump to 0.3.8
	* NEWS: Adjust 0.3.8 to August.
	* po/POTFILES.in,
	po/POTFILES.skip: Fix some error when make distcheck.

2008-08-08  Jim Huang  <jserv.tw@gmail.com>

	* NEWS: updated to reflect recent changes.

2008-08-08  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Introduced gcc attribute supports: const, noreturn,
	packed, and unused.

	* src/emoticondlg.cpp (CEmoticonDlg::OnDown) (CEmoticonDlg::OnAdd)
	(CEmoticonDlg::OnEdit) (CEmoticonDlg::OnRemove) (CEmoticonDlg::OnUp)
	(CEmoticonDlg::SaveEmoticon) (CEmoticonDlg::OnListRowActivated),
	src/core/termdata.cpp (CTermData::OnLineModified),
	src/core/termview.cpp (on_key_pressed) (on_im_commit) (on_mouse_down)
	(on_mouse_up) (on_mouse_move) (on_mouse_scroll)
	(CTermView::OnBeforeDestroy) (CTermView::OnSetFocus)
	(CTermView::OnKeyDown) (CTermView::OnTextInput)
	(CTermView::DrawSpaceFillingChar) (CTermView::OnSize)
	(CTermView::ExtendSelection) (CTermView::OnMouseMove)
	(CTermView::OnMouseScroll) (CTermView::OnRButtonDown)
	(CTermView::OnRButtonUp) (CTermView::OnKillFocus)
	(CTermView::PreKeyDown) (CTermView::OnMButtonDown)
	(CTermView::DoPasteFromClipboard) (CTermView::OnHyperlinkClicked),
	src/core/view.cpp (on_expose) (on_configure) (on_focus_in)
	(on_focus_out) (CView::OnSize) (CView::OnSetFocus)
	(CView::OnKillFocus),
	src/core/widget.cpp (on_create) (on_destroy),
	src/editfavdlg.cpp (CEditFavDlg::OnAdd) (CEditFavDlg::OnEdit)
	(CEditFavDlg::OnRemove) (CEditFavDlg::OnUp) (CEditFavDlg::OnDown)
	(CEditFavDlg::OnRowActivated),
	src/view/telnetcon.h (CDNSRequest),
	src/view/telnetview.cpp (on_hyperlink_copy) (CTelnetView::PreKeyDown),
	src/view/telnetcon.cpp (CTelnetCon::OnSocket)
	(CTelnetCon::ProcessDNSQueue) (CTelnetCon::OnProcessDNSQueueExit),
	src/mainframe.cpp (CMainFrame::OnTrayButton_Toggled)
	(CMainFrame::OnTray_Popup) (CMainFrame::OnSize) (CMainFrame::OnNewCon)