@@ -1,3 +1,8 @@
+2008-08-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* Makefile.am: Fix the release problem of `./configure --enable-plugin`
+	after `make dist-bzip2`.
+
 2008-08-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* configure.ac: Bump to 0.3.8
